[gd_scene load_steps=8 format=3 uid="uid://clqn35mc3ufy1"]

[ext_resource type="Texture2D" uid="uid://ctj8dg5lpcxuy" path="res://GUI/background.jpg" id="1_11wea"]
[ext_resource type="Script" path="res://scripts/fuel_battle.gd" id="1_ncax8"]
[ext_resource type="PackedScene" uid="uid://n08yfeo5kny4" path="res://scenes/border.tscn" id="1_nhpsb"]
[ext_resource type="PackedScene" uid="uid://ds7xy6ta18rte" path="res://scenes/corner.tscn" id="2_qe4wh"]
[ext_resource type="PackedScene" uid="uid://b0s0djjlxlkqf" path="res://scenes/fuel_ship.tscn" id="3_stfvl"]
[ext_resource type="PackedScene" uid="uid://bek7gvahiexkp" path="res://scenes/player_border.tscn" id="4_8pjra"]
[ext_resource type="PackedScene" uid="uid://dt64gv50kvbja" path="res://scenes/veil.tscn" id="7_jejkl"]

[node name="FuelBattle" type="Node2D"]
script = ExtResource("1_ncax8")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.400698, 0.400698, 0.400698, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = -12.0
offset_right = 1173.0
offset_bottom = 670.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_11wea")
expand_mode = 2

[node name="Fuel" type="Node2D" parent="."]

[node name="Map" type="Node2D" parent="."]

[node name="Border1" parent="Map" instance=ExtResource("1_nhpsb")]
position = Vector2(576, 635)
rotation = -3.14159
scale = Vector2(2.3, 1)

[node name="Border2" parent="Map" instance=ExtResource("1_nhpsb")]
position = Vector2(577, 13)
scale = Vector2(2.3, 1)

[node name="Border3" parent="Map" instance=ExtResource("1_nhpsb")]
position = Vector2(1139, 325)
rotation = 1.5708
scale = Vector2(1.28, 1)

[node name="Border4" parent="Map" instance=ExtResource("1_nhpsb")]
position = Vector2(13, 321)
rotation = -1.5708
scale = Vector2(1.28, 1)

[node name="Corner1" parent="Map" instance=ExtResource("2_qe4wh")]
rotation = 2.35619

[node name="Corner2" parent="Map" instance=ExtResource("2_qe4wh")]
position = Vector2(1152, 648)
rotation = -0.785398

[node name="Corner3" parent="Map" instance=ExtResource("2_qe4wh")]
position = Vector2(1152, 0)
rotation = -2.35619

[node name="Corner4" parent="Map" instance=ExtResource("2_qe4wh")]
position = Vector2(0, 648)
rotation = 0.785398

[node name="PlayerBorder1" parent="Map" instance=ExtResource("4_8pjra")]
position = Vector2(567, 700)

[node name="PlayerBorder2" parent="Map" instance=ExtResource("4_8pjra")]
position = Vector2(576, -50)

[node name="PlayerBorder3" parent="Map" instance=ExtResource("4_8pjra")]
position = Vector2(1204, 315)
rotation = 1.5708

[node name="PlayerBorder4" parent="Map" instance=ExtResource("4_8pjra")]
position = Vector2(-50, 318)
rotation = 1.5708

[node name="Ship1" parent="." instance=ExtResource("3_stfvl")]
modulate = Color(1, 0.745098, 0.403922, 1)
position = Vector2(574, 546)
motion_mode = 0
player = 1

[node name="Ship2" parent="." instance=ExtResource("3_stfvl")]
modulate = Color(0.227451, 0.584314, 1, 1)
position = Vector2(579, 107)
rotation = 3.14159
player = 2

[node name="Ship3" parent="." instance=ExtResource("3_stfvl")]
modulate = Color(1, 0.545098, 1, 1)
position = Vector2(1034, 319)
rotation = -1.5708
player = 3

[node name="Ship4" parent="." instance=ExtResource("3_stfvl")]
modulate = Color(0.403922, 0.988235, 0.443137, 1)
position = Vector2(125, 321)
rotation = 1.5708
player = 4

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 325)

[node name="FuelSpawner" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Veil" parent="." instance=ExtResource("7_jejkl")]

[connection signal="point" from="Map/PlayerBorder1" to="." method="on_point" binds= [1]]
[connection signal="point" from="Map/PlayerBorder2" to="." method="on_point" binds= [2]]
[connection signal="point" from="Map/PlayerBorder3" to="." method="on_point" binds= [3]]
[connection signal="point" from="Map/PlayerBorder4" to="." method="on_point" binds= [4]]
[connection signal="timeout" from="FuelSpawner" to="." method="on_ball_spawn"]
